--- a/frontend/app/views/shared/_pagination_summary.html.erb
+++ b/frontend/app/views/shared/_pagination_summary.html.erb
@@ -10,28 +10,28 @@
         <span class="btn btn-mini last"><span class="caret"></span></span>
       </a>
       <ul class="dropdown-menu pull-right">
-        <li><%= link_to I18n.t("search_sorting.relevance"), params_for_search("sort" => "") %></li>
+        <li><%= link_to I18n.t("search_sorting.relevance"), build_search_params("sort" => "") %></li>
         <% if show_title_column? %>
           <li class="dropdown-submenu pull-left">
-            <%= link_to title_sort_label, params_for_search("sort" => @search_data.sort_filter_for("title_sort")) %>
+            <%= link_to title_sort_label, build_search_params("sort" => @search_data.sort_filter_for("title_sort")) %>
             <ul class="dropdown-menu">
-              <li><%= link_to I18n.t("search_sorting.asc"), params_for_search("sort" => "title_sort asc") %></li>
-              <li><%= link_to I18n.t("search_sorting.desc"), params_for_search("sort" => "title_sort desc") %></li>
+              <li><%= link_to I18n.t("search_sorting.asc"), build_search_params("sort" => "title_sort asc") %></li>
+              <li><%= link_to I18n.t("search_sorting.desc"), build_search_params("sort" => "title_sort desc") %></li>
             </ul>
           </li>
         <% end %>
         <li class="dropdown-submenu pull-left">
-          <%= link_to I18n.t("search_sorting.create_time"), params_for_search("sort" => @search_data.sort_filter_for("create_time", "desc")) %>
+          <%= link_to I18n.t("search_sorting.create_time"), build_search_params("sort" => @search_data.sort_filter_for("create_time", "desc")) %>
           <ul class="dropdown-menu">
-            <li><%= link_to I18n.t("search_sorting.asc"), params_for_search("sort" => "create_time asc") %></li>
-            <li><%= link_to I18n.t("search_sorting.desc"), params_for_search("sort" => "create_time desc") %></li>
+            <li><%= link_to I18n.t("search_sorting.asc"), build_search_params("sort" => "create_time asc") %></li>
+            <li><%= link_to I18n.t("search_sorting.desc"), build_search_params("sort" => "create_time desc") %></li>
           </ul>
         </li>
         <li class="dropdown-submenu pull-left">
-          <%= link_to I18n.t("search_sorting.user_mtime"), params_for_search("sort" => @search_data.sort_filter_for("user_mtime", "desc")) %>
+          <%= link_to I18n.t("search_sorting.user_mtime"), build_search_params("sort" => @search_data.sort_filter_for("user_mtime", "desc")) %>
           <ul class="dropdown-menu">
-            <li><%= link_to I18n.t("search_sorting.asc"), params_for_search("sort" => "user_mtime asc") %></li>
-            <li><%= link_to I18n.t("search_sorting.desc"), params_for_search("sort" => "user_mtime desc") %></li>
+            <li><%= link_to I18n.t("search_sorting.asc"), build_search_params("sort" => "user_mtime asc") %></li>
+            <li><%= link_to I18n.t("search_sorting.desc"), build_search_params("sort" => "user_mtime desc") %></li>
           </ul>
         </li>
       </ul>
