Hide the 'System' menu when there are no actions available to the user in the menu

--- a/frontend/app/views/shared/_header_user.html.erb
+++ b/frontend/app/views/shared/_header_user.html.erb
@@ -14,7 +14,7 @@
       </ul>
     </li>
   <% end %>
-  <li class="dropdown">
+  <li class="dropdown system-menu">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= I18n.t("navbar.global_admin") %> <b class="caret"></b></a>
     <ul class="dropdown-menu">
       <% if user_can?('create_repository') || user_can?('manage_users') %>
