--- a/frontend/app/views/accessions/_linker.html.erb
+++ b/frontend/app/views/accessions/_linker.html.erb
@@ -18,7 +18,7 @@
             data-url="<%= url_for :controller => :search, :action => :do_search, :format => :json %>"
             data-browse-url="<%= url_for :controller => :search, :action => :do_search, :format => :js, :facets => SearchResultData.ACCESSION_FACETS %>"
             data-selected="<%= selected_json %>"
-            data-format_property="title"
+            data-format_property="display_string"
             data-multiplicity="one"
             data-types='["accession"]'
           />
