--- a/frontend/app/views/locations/_batch_form.html.erb
+++ b/frontend/app/views/locations/_batch_form.html.erb
@@ -2,10 +2,10 @@
   <thead>
   <tr>
     <th></th>
-    <th><%= I18n.t("location_batch.label") %></th>
+    <th class="required"><%= I18n.t("location_batch.label") %></th>
     <th><%= I18n.t("location_batch.prefix") %></th>
-    <th class="highlighted"><%= I18n.t("location_batch.start") %></th>
-    <th class="highlighted"><%= I18n.t("location_batch.end") %></th>
+    <th class="highlighted required"><%= I18n.t("location_batch.start") %></th>
+    <th class="highlighted required"><%= I18n.t("location_batch.end") %></th>
     <th><%= I18n.t("location_batch.suffix") %></th>
   </tr>
   </thead>
