Switch digital object components to make identifier and title optional.
Made corresponding changes to use a "display_string" generated property to store the display string for the record.

--- a/frontend/app/views/digital_object_components/_edit_inline.html.erb
+++ b/frontend/app/views/digital_object_components/_edit_inline.html.erb
@@ -19,7 +19,7 @@
          node_data = {
            'id' => @digital_object_component.id,
            'uri' => @digital_object_component.uri,
-           'title' => @digital_object_component.title,
+           'title' => @digital_object_component.display_string,
            'level' => false,
            'jsonmodel_type' => @digital_object_component.jsonmodel_type,
            'node_type' => @digital_object_component.jsonmodel_type,
