--- a/public/app/views/records/digital_object_component.html.erb
+++ b/public/app/views/records/digital_object_component.html.erb
@@ -1,5 +1,5 @@
 <%
-   record_title = @digital_object_component.title
+   record_title = @digital_object_component.display_string
    set_title(record_title)
 %>
 
