--- a/frontend/app/views/digital_object_components/_form_container.html.erb
+++ b/frontend/app/views/digital_object_components/_form_container.html.erb
@@ -1,7 +1,7 @@
 <%= link_to_help :topic => "digital_object_component" %>
 
 <h2>
-  <%= @digital_object_component.title.blank? ? I18n.t("digital_object_component._singular") : @digital_object_component.title %>
+  <%= @digital_object_component.display_string.blank? ? I18n.t("digital_object_component._singular") : @digital_object_component.display_string %>
   <span class="label label-info"><%= I18n.t("digital_object_component._singular") %></span>
 </h2>
 
@@ -20,8 +20,8 @@
         <%= I18n.t("digital_object_component._frontend.section.basic_information") %>
         <%= link_to_help :topic => "digital_object_component_basic_information" %>
       </h3>
-      <%= form.label_and_textfield "label" %>
-      <%= form.label_and_textarea "title" %>
+      <%= form.label_and_textfield "label", :required => :conditionally %>
+      <%= form.label_and_textarea "title", :required => :conditionally %>
       <%= form.label_and_textfield "component_id" %>
       <%= form.label_and_boolean "publish", {}, form.default_for("default") %>
       <%= form.label_and_select "language", form.possible_options_for("language", true) %>
@@ -33,7 +33,7 @@
 
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "file_versions"} %>
 
-  <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "dates", :template => "archival_record_date"} %>
+  <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "dates", :template => "archival_record_date", :required => :conditionally} %>
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "extents"} %>
 
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "linked_agents", :template => "digital_object_component_linked_agent"} %>
