--- a/frontend/app/views/digital_object_components/_show_inline.html.erb
+++ b/frontend/app/views/digital_object_components/_show_inline.html.erb
@@ -6,7 +6,7 @@
     <%= render :partial => "toolbar" %>
     <div class="record-pane">
       <% define_template "digital_object_component", jsonmodel_definition(:digital_object_component) do |readonly, digital_object_component| %>
-        <h2><%= digital_object_component.title %> <span class="label label-info"><%= I18n.t("digital_object_component._singular") %></span></h2>
+        <h2><%= digital_object_component.display_string %> <span class="label label-info"><%= I18n.t("digital_object_component._singular") %></span></h2>
         <section id="basic_information">
           <h3><%= I18n.t("digital_object_component._frontend.section.basic_information") %></h3>
   
