--- a/frontend/app/views/extents/_template.html.erb
+++ b/frontend/app/views/extents/_template.html.erb
@@ -1,8 +1,8 @@
 <% define_template "extent", jsonmodel_definition(:extent) do |form| %>
   <div class="subrecord-form-fields">
-    <%= form.label_and_select("portion", form.possible_options_for("portion")) %>
+    <%= form.label_and_select("portion", form.possible_options_for("portion", true)) %>
     <%= form.label_and_textfield("number") %>
-    <%= form.label_and_select("extent_type", form.possible_options_for("extent_type")) %>
+    <%= form.label_and_select("extent_type", form.possible_options_for("extent_type", true)) %>
     <hr/>
     <%= form.label_and_textarea("container_summary") %>
     <%= form.label_and_textarea("physical_details") %>
