--- a/frontend/app/assets/javascripts/resources.show.js.erb
+++ b/frontend/app/assets/javascripts/resources.show.js.erb
@@ -1,3 +1,17 @@
 //= require tree
 //= require merge_dropdown
 //= require transfer_dropdown
+
+$(function() {
+
+  // if finding aid is empty, then we can hide it
+  $(document).bind("loadedrecordform.aspace", function(event, $container) {
+    if ($container.has("#finding_aid")) {
+      if ($.trim($("#finding_aid .subrecord-form-fields", $container).html()).length === 0) {
+        $("#finding_aid").remove();
+        $("a[href='#finding_aid']", "#archivesSpaceSidebar").remove();
+      }
+    }
+  });
+
+});
