Remove unused recent searches from cookie

--- a/frontend/app/views/shared/_breadcrumb.html.erb
+++ b/frontend/app/views/shared/_breadcrumb.html.erb
@@ -13,11 +13,7 @@
                <li class="active"><%= crumb[0] %></li>
             <% end %>
          <% end %>
-        <% if params.has_key?("search_token") and session[:recent_searches] and session[:recent_searches].has_key?(params["search_token"].to_i) %>
-          <li class="return-to-search pull-right">
-            <%= link_to "Return to Search Results", session[:recent_searches][params["search_token"].to_i].delete_if {|k, v| k === "timestamp" }, :class => "btn btn-small" %>
-          </li>
-        <% elsif flash.key? :spawned_from_accession %>
+        <% if flash.key? :spawned_from_accession %>
           <li class="return-to-search pull-right">
             <%= link_to "Return to Accession", {:controller => :accessions, :action => :show, :id => flash[:spawned_from_accession]}, :class => "btn btn-small" %>
           </div>
