--- a/frontend/app/views/events/edit.html.erb
+++ b/frontend/app/views/events/edit.html.erb
@@ -1,4 +1,8 @@
-<%= setup_context :object => @event, :title => @event.id %>
+<%
+  record_title = "#{I18n.t("enumerations.event_event_type.#{@event.event_type}")} (#{@event.id})"
+%>
+
+<%= setup_context :object => @event, :title => record_title %>
 
 <%= form_for @event, :as => "event", :url => {:action => :update}, :html => {:class => 'form-horizontal aspace-record-form'}.merge(update_monitor_params(@event)) do |f| %>
   <%= form_context :event, @event do |form| %>
@@ -10,7 +14,7 @@
         <%= render :partial => "toolbar" %>
         <div class="record-pane">
           <%= link_to_help :topic => "event" %>
-          <h2><%= I18n.t("event._singular") %> <%= @event.id %>  <span class="label label-info"><%= I18n.t("event._singular") %></span></h2>
+          <h2><%= record_title %>  <span class="label label-info"><%= I18n.t("event._singular") %></span></h2>
 
           <%= render :partial => "events/form", :locals => {:form => form} %>
           <div class="form-actions">
