--- a/frontend/app/views/events/show.html.erb
+++ b/frontend/app/views/events/show.html.erb
@@ -1,4 +1,8 @@
-<%= setup_context :object => @event, :title => @event.id %>
+<%
+  record_title = "#{I18n.t("enumerations.event_event_type.#{@event.event_type}")} (#{@event.id})"
+%>
+
+<%= setup_context :object => @event, :title => record_title %>
 
 <div class="row-fluid">
    <div class="span3">
@@ -7,7 +11,7 @@
   <div class="span9">
     <%= render :partial => "toolbar" %>
     <div class="record-pane">
-      <h2><%= I18n.t("enumerations.event_event_type.#{@event.event_type}") %>  <span class="label label-info"><%= I18n.t("event._singular") %></span></h2>
+      <h2><%= record_title %>  <span class="label label-info"><%= I18n.t("event._singular") %></span></h2>
 
       <%= render :partial => "shared/flash_messages" %>
 
