--- a/frontend/app/views/shared/_header_repository.html.erb
+++ b/frontend/app/views/shared/_header_repository.html.erb
@@ -54,7 +54,13 @@
                     </li>
                   <% end %>
                   <% if user_can?('update_location_record') %>
-                    <li><%= link_to I18n.t("location._singular"), :controller => :locations, :action => :new %></li>
+                    <li class="dropdown-submenu">
+                      <a href="javascript:void(0);"><%= I18n.t("location._singular") %></a>
+                      <ul class="dropdown-menu">
+                        <li><%= link_to I18n.t("location._frontend.action.single"), :controller => :locations, :action => :new %></li>
+                        <li><%= link_to I18n.t("location._frontend.action.batch"), :controller => :locations, :action => :batch %></li>
+                      </ul>
+                    </li>
                   <% end %>
                   <% if user_can?('update_event_record') %>
                     <li><%= link_to I18n.t("event._singular"), :controller => :events, :action => :new %></li>
