Fix edit link from a component's readonly page not opening the respective edit form and expanding the tree

--- a/frontend/app/assets/javascripts/tree.js.erb
+++ b/frontend/app/assets/javascripts/tree.js.erb
@@ -709,7 +709,7 @@ $(function() {
                   $tree.data("loading-node", null);
                   return {
                     node_uri: "root",
-                    hash: document.location.hash
+                    hash: location.hash
                   };
                 } else {
                   $tree.data("loading-node", node.attr("id"));
