Only show 'Edit' action on search results for records the user can actually edit

--- a/frontend/app/views/search/_listing.html.erb
+++ b/frontend/app/views/search/_listing.html.erb
@@ -77,10 +77,7 @@
             <% if not deleted %>
               <div class="btn-group" style="float: right">
                 <%= link_to I18n.t("actions.view"), {:controller => :resolver, :action => :resolve_readonly, :uri => result["id"]}, :class => "btn btn-mini" %>
-                <%
-                  can_edit = result['primary_type'] === "repository" ? user_can?('manage_repository', result['id']) : user_can?('update_archival_record')
-                %>
-                <% if can_edit %>
+                <% if can_edit_search_result?(result) %>
                   <%= link_to I18n.t("actions.edit"), {:controller => :resolver, :action => :resolve_edit, :uri => result["id"]}, :class => "btn btn-mini btn-primary" %>
                 <% end %>
               </div>
