--- a/frontend/app/views/shared/_header_user.html.erb
+++ b/frontend/app/views/shared/_header_user.html.erb
@@ -55,6 +55,9 @@
       </span>
       <a class="btn dropdown-toggle last" data-toggle="dropdown" href="#"><span class="caret"></span></a>
       <ul class="dropdown-menu pull-right">
+        <% if user_can?('become_user') %>
+          <li><%= link_to I18n.t("navbar.become-user"), :controller => "session", :action => "select_user" %></li>
+        <% end %>
         <li><%= link_to I18n.t("navbar.logout"), :controller => "session",:action => "logout"%></li>
       </ul>
     </div>
