--- a/frontend/app/views/session/select_user.html.erb
+++ b/frontend/app/views/session/select_user.html.erb
@@ -3,12 +3,14 @@
    </div>
 
    <div class="span9">
-     <%= render :partial => "shared/flash_messages" %>
-
     <div class="record-pane">
+      <h2><%= I18n.t("navbar.become-user") %></h2>
+
+      <%= render :partial => "shared/flash_messages" %>
+
       <%= form_for @become_user, :as => "become_user", :url => {:action => :become_user}, :html => {:class => 'form-horizontal'} do |f| %>
         <input id="select-user" name="username" class="input-medium" type="text" autocomplete="off" placeholder="Username" />
-        <input type="submit" value="<%= I18n.t("become-user.become-user") %>"/>
+        <input class="btn btn-primary" type="submit" value="<%= I18n.t("become-user.become-user") %>"/>
       <% end %>
     </div>
    </div>
