--- a/frontend/app/views/layouts/application.html.erb
+++ b/frontend/app/views/layouts/application.html.erb
@@ -16,6 +16,15 @@
   <!--[if lt IE 9]>
   <%= javascript_include_tag "html5shiv" %>
   <![endif]-->
+
+  <% AppConfig[:plugins].each do |plugin| %>
+    <% if controller.template_exists?("#{plugin}/layout_head", [], true) %>
+      <!-- Begin layout_head from plugin <%= plugin %> -->
+      <%= render "#{plugin}/layout_head" %>
+      <!-- End layout_head from plugin <%= plugin %> -->
+    <% end %>
+  <% end %>
+
 </head>
 <body data-spy="scroll" data-target="#archivesSpaceSidebar" data-offset="20" class="action-<%= controller.action_name %>">
 
