--- a/frontend/app/views/layouts/application.html.erb
+++ b/frontend/app/views/layouts/application.html.erb
@@ -17,14 +17,13 @@
   <%= javascript_include_tag "html5shiv" %>
   <![endif]-->
 
-  <% AppConfig[:plugins].each do |plugin| %>
-    <% if controller.template_exists?("#{plugin}/layout_head", [], true) %>
-      <!-- Begin layout_head from plugin <%= plugin %> -->
-      <%= render "#{plugin}/layout_head" %>
-      <!-- End layout_head from plugin <%= plugin %> -->
+  <% ASUtils.find_local_directories('frontend/views/layout_head.html.erb').each do |layout| %>
+    <% if File.exists?(layout) %>
+      <!-- Begin plugin layout -->
+      <%= render :file => layout %>
+      <!-- End plugin layout -->
     <% end %>
   <% end %>
-
 </head>
 <body data-spy="scroll" data-target="#archivesSpaceSidebar" data-offset="20" class="action-<%= controller.action_name %>">
 
