Fix backend permissions to allow repository managers to change user groups.
  * Removed permissions on the "list users" endpoint (not needed)

  * Change the "update user" endpoint to work out whether it's being asked to
    change a user or just their group memberships.  Require different
    permissions depending on which it is (manage_users for the former;
    manage_repository for the latter)

  * Change the frontend templates to require manage_repository, not
    manage_users when displaying the group listing.

--- a/frontend/app/views/users/edit_groups.html.erb
+++ b/frontend/app/views/users/edit_groups.html.erb
@@ -13,7 +13,7 @@
         <% end %>
 
         <%= form_context :user, @user do |form| %>
-          <% if user_can?('manage_users') %>
+          <% if user_can?('manage_repository') %>
             <section id="groups" class="subrecord-form-dummy">
               <h3><%= I18n.t("group._plural") %></h3>
               <div class="subrecord-form-container">
