--- a/_yard/templates/default/layout/html/footer.erb
+++ b/_yard/templates/default/layout/html/footer.erb
@@ -1,5 +1,5 @@
 <div id="footer">
-  ArchivesSpace Version 0.5.x Documentation Generated on <%= Time.now.strftime("%c") %> by
+  ArchivesSpace Version 0.6.2 Documentation Generated on <%= Time.now.strftime("%c") %> by
   <a href="http://yardoc.org" title="Yay! A Ruby Documentation Tool" target="_parent">yard</a>
   <%= YARD::VERSION %> (ruby-<%= RUBY_VERSION %>).
 </div>
