--- a/frontend/app/views/container/_template.html.erb
+++ b/frontend/app/views/container/_template.html.erb
@@ -9,6 +9,9 @@
     <%= form.label_and_textfield "indicator_2" %>
     <%= form.label_and_select "type_3", form.possible_options_for('type_3', true) %>
     <%= form.label_and_textfield "indicator_3" %>
+    <hr/>
+    <%= form.label_and_textfield "container_extent", :required => :conditionally %>
+    <%= form.label_and_select "container_extent_type", form.possible_options_for("container_extent_type", true), :required => :conditionally %>
 
     <div class="subrecord-form-container">
       <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "container_locations", :heading_size => "h5"} %>
