Allow addition of multiple RDE rows in one action
WIP allow basic fill of a RDE column

WIP basic js refactor to introduce contexts for setting up each fill form

WIP introduce basic sequence form (not working yet)

Add ability to apply a sequence to a RDE column

WIP remove reliance of column indexes from RDE javascript

WIP add ability to reorder columns

Re-enable sticky columns, remove unrequired js/css, and allow toggle between the fill and reorder panels

I18n all new RDE strings

Fix sequence fill.. still refering to indexes

Rebuild the section header row when the columns are reordered

--- a/frontend/app/assets/stylesheets/archivesspace/rde.less
+++ b/frontend/app/assets/stylesheets/archivesspace/rde.less
@@ -96,4 +96,46 @@
       }
     }
   }
+  .add-rows-form {
+    padding:8px;
+
+    button {
+      margin-top: 4px;
+    }
+  }
+  .rde-inline-form {
+    border-bottom: 1px solid #ddd;
+    border-top: 1px solid #ddd;
+    background-color: #FAFAFA;
+    margin-bottom: 10px;
+    padding: 10px;
+    position: relative;
+
+    .nav-tabs {
+      margin: 0;
+      a {
+        padding: 4px 8px;
+      }
+    }
+    .tab-content {
+      border: 1px solid #ddd;
+      background-color: white;
+      padding: 10px;
+      margin-top: -1px;
+      .border-radius(0 0 4px 4px);
+    }
+    .btn-cancel {
+      float: none;
+    }
+  }
+  #columnOrderUp {
+    position: absolute;
+    top: 70px;
+    margin-left: 10px;
+  }
+  #columnOrderDown {
+    position: absolute;
+    top: 100px;
+    margin-left: 10px;
+  }
 }
