--- a/frontend/app/views/archival_objects/_rde.html.erb
+++ b/frontend/app/views/archival_objects/_rde.html.erb
@@ -1,4 +1,5 @@
 <% define_template "rde_row", jsonmodel_definition(:archival_object) do |form, archival_object| %>
+  <% first_row = form.current_context.first == "children[0]" %>
   <tr>
     <td class="status">
       <span class="icon-exclamation-sign invalid"></span>
@@ -139,7 +140,7 @@
     <td class="control-group">
       <div class="btn-group">
         <button class="btn btn-success add-row"><span class="icon-plus icon-white"></span></button>
-        <button class="btn remove-row"><span class="icon-remove"></span></button>
+        <% if !first_row %><button class="btn remove-row"><span class="icon-remove"></span></button><% end %>
       </div>
     </td>
   </tr>
@@ -154,12 +155,95 @@
         <%= render :partial => "shared/form_messages", :locals => {:form => form} %>
 
         <p>
-          <button class="btn btn-small btn-success add-row"><%= I18n.t("rde.actions.add_row") %></button>
+          <div class="btn-group">
+            <button class="btn btn-small btn-success add-row"><%= I18n.t("rde.actions.add_row") %></button>
+            <button class="btn btn-small btn-success dropdown-toggle" data-toggle="dropdown">
+              <span class="caret"></span>
+            </button>
+            <div class="dropdown-menu add-rows-form">
+              <div><input type="number" class="input-medium" value="1" /></div>
+              <button class="btn btn-small input-medium btn-primary" type="button"><%= I18n.t("rde.actions.add_rows") %></button>
+            </div>
+          </div>
           <select id="rde_hidden_columns" multiple="multiple" data-i18n-prefix="<%= I18n.t("rde.actions.showhide_prefix") %>" data-i18n-suffix="<%= I18n.t("rde.actions.showhide_suffix") %>" data-i18n-none="<%= I18n.t("rde.actions.showhide_none") %>"></select>
+          <div class="btn-group">
+            <button class="btn btn-small fill-column"><%= I18n.t("rde.actions.fill_toggle") %></button>
+            <button class="btn btn-small reorder-columns"><%= I18n.t("rde.actions.reorder_toggle") %></button>
+          </div>
           <a href="#" id="rde_reset" class="btn btn-small"><%= I18n.t("rde.actions.reset") %></a>
         </p>
 
-        <table class="table table-striped table-bordered table-condensed" style="width: auto; margin-right: 20px;">
+        <div class="fill-column-form rde-inline-form" style="display: none;">
+          <ul class="nav nav-tabs">
+            <li class="active"><a href="#fill_basic" data-toggle="tab"><%= I18n.t("rde.fill_column.basic") %></a></li>
+            <li><a href="#fill_sequence" data-toggle="tab"><%= I18n.t("rde.fill_column.sequence") %></a></li>
+          </ul>
+          <div class="tab-content">
+            <div class="tab-pane active" id="fill_basic">
+              <fieldset>
+                <div class="control-group">
+                  <label class="control-label" for="basicFillTargetColumn"><%= I18n.t("rde.column_label") %></label>
+                  <div class="controls">
+                    <select id="basicFillTargetColumn"><option selected="selected" class="empty"></option></select>
+                  </div>
+                </div>
+                <div class="control-group">
+                  <label class="control-label" for="basicFillTargetColumn"><%= I18n.t("rde.fill_column.fill_value") %></label>
+                  <div class="controls fill-value-container">
+                    <div class="alert alert-info"><%= I18n.t("rde.fill_column.select_a_column") %></div>
+                  </div>
+                </div>
+                <div class="form-actions">
+                  <button class="btn btn-primary btn-small disabled" disabled="disabled"><%= I18n.t("rde.fill_column.apply_basic_fill") %></button>
+                  <button class="btn btn-small btn-cancel"><%= I18n.t("actions.cancel") %></button>
+                </div>
+              </fieldset>
+            </div>
+            <div class="tab-pane" id="fill_sequence" data-sequence-generator-url="<%= url_for :controller => :archival_objects, :action => :generate_sequence %>">
+              <div class="alert alert-warning" id="sequenceTooSmallMsg" style="display: none;">
+                <p><%= I18n.t("rde.fill_column.sequence_count_warning") %></p>
+                <button class="btn btn-warning btn-small btn-continue-sequence-fill"><%= I18n.t("actions.continue") %></button>
+              </div>
+              <fieldset>
+                <div class="control-group">
+                  <label class="control-label" for="sequenceFillTargetColumn"><%= I18n.t("rde.column_label") %></label>
+                  <div class="controls">
+                    <select id="sequenceFillTargetColumn"><option selected="selected" class="empty"></option></select>
+                  </div>
+                </div>
+                <div class="control-group">
+                  <label class="control-label"><%= I18n.t("rde.fill_column.fill_value") %></label>
+                  <div class="controls fill-value-container">
+                    <input id="sequenceFillPrefix" class="input-mini" type="text" placeholder="Prefix"/>
+                    <input id="sequenceFillFrom" class="input-mini" type="text" placeholder="From"/> -
+                    <input id="sequenceFillTo" class="input-mini" type="text" placeholder="To"/>
+                    <input id="sequenceFillSuffix" class="input-mini" type="text" placeholder="Suffix"/>
+                    <button class="btn btn-small preview-sequence"><%= I18n.t("rde.fill_column.preview_sequence") %></button>
+                  </div>
+                </div>
+                <div class="control-group">
+                  <div class="controls sequence-preview"></div>
+                </div>
+                <div class="form-actions">
+                  <button class="btn btn-primary btn-small disabled" disabled="disabled"><%= I18n.t("rde.fill_column.apply_sequence_fill") %></button>
+                  <button class="btn btn-small btn-cancel"><%= I18n.t("actions.cancel") %></button>
+                </div>
+              </fieldset>
+            </div>
+          </div>
+        </div>
+
+        <div id="columnReorderForm" class="rde-inline-form" style="display: none;">
+          <select id="columnOrder" multiple="multiple"></select>
+          <a href="JavaScript:void(0);" id="columnOrderUp" class="btn btn-mini"><span class="icon icon-arrow-up"></span></a>
+          <a href="JavaScript:void(0);" id="columnOrderDown" class="btn btn-mini"><span class="icon icon-arrow-down"></span></a>
+          <div class="form-actions">
+            <button class="btn btn-primary btn-small disabled" disabled="disabled"><%= I18n.t("rde.reorder_columns.apply_order") %></button>
+            <button class="btn btn-small btn-cancel"><%= I18n.t("actions.cancel") %></button>
+          </div>
+        </div>
+
+        <table id="rdeTable" class="table table-striped table-bordered table-condensed" style="width: auto; margin-right: 20px;">
           <colgroup>
             <col class="status" data-default-width='20' />
             <col class="fieldset-col" data-default-width='150' />
@@ -189,39 +273,39 @@
           </colgroup>
           <thead>
           <tr class="sections">
-            <th colspan="1"></th>
-            <th colspan="5"><%= I18n.t("rde.sections.basic_information") %></th>
-            <th colspan="4" class="conditionally-required"><%= I18n.t("rde.sections.date") %></th>
-            <th colspan="8"><%= I18n.t("rde.sections.instance") %></th>
-            <th colspan="6"><%= I18n.t("rde.sections.notes") %></th>
-            <th colspan="1"></th>
+            <th data-id="empty" colspan="1"></th>
+            <th data-id="basic" colspan="5"><%= I18n.t("rde.sections.basic_information") %></th>
+            <th data-id="date" colspan="4" class="conditionally-required"><%= I18n.t("rde.sections.date") %></th>
+            <th data-id="instance" colspan="8"><%= I18n.t("rde.sections.instance") %></th>
+            <th data-id="note" colspan="6"><%= I18n.t("rde.sections.notes") %></th>
+            <th data-id="empty" colspan="1"></th>
           </tr>
           <tr class="fieldset-labels">
-            <th/>
-            <th class="fieldset-label required sticky"><%= I18n.t("archival_object.level") %></th>
-            <th class="fieldset-label sticky"><%= I18n.t("archival_object.publish") %></th>
-            <th class="fieldset-label conditionally-required"><%= I18n.t("archival_object.title") %></th>
-            <th class="fieldset-label"><%= I18n.t("archival_object.component_id") %></th>
-            <th class="fieldset-label sticky"><%= I18n.t("archival_object.language") %></th>
-            <th class="fieldset-label sticky"><%= I18n.t("date.expression") %></th>
-            <th class="fieldset-label sticky"><%= I18n.t("rde.date_type") %></th>
-            <th class="fieldset-label sticky"><%= I18n.t("date.begin") %></th>
-            <th class="fieldset-label sticky"><%= I18n.t("date.end") %></th>
-            <th class="fieldset-label sticky"><%= I18n.t("rde.instance_type") %></th>
-            <th class="fieldset-label sticky"><%= I18n.t("container.type_1") %></th>
-            <th class="fieldset-label sticky"><%= I18n.t("container.indicator_1") %></th>
-            <th class="fieldset-label sticky"><%= I18n.t("container.barcode_1") %></th>
-            <th class="fieldset-label"><%= I18n.t("container.type_2") %></th>
-            <th class="fieldset-label"><%= I18n.t("container.indicator_2") %></th>
-            <th class="fieldset-label"><%= I18n.t("container.type_3") %></th>
-            <th class="fieldset-label"><%= I18n.t("container.indicator_3") %></th>
-            <th class="fieldset-label"><%= I18n.t("note._singular") %> 1</th>
-            <th class="fieldset-label"><%= I18n.t("note_attributes.content") %> 1</th>
-            <th class="fieldset-label"><%= I18n.t("note._singular") %> 2</th>
-            <th class="fieldset-label"><%= I18n.t("note_attributes.content") %> 2</th>
-            <th class="fieldset-label"><%= I18n.t("note._singular") %> 3</th>
-            <th class="fieldset-label"><%= I18n.t("note_attributes.content") %> 3</th>
-            <th></th>
+            <th id="colStatus" data-section="empty" />
+            <th id="colLevel" class="fieldset-label required sticky" data-section="basic"><%= I18n.t("archival_object.level") %></th>
+            <th id="colPublish" class="fieldset-label sticky" data-section="basic"><%= I18n.t("archival_object.publish") %></th>
+            <th id="colTitle" class="fieldset-label conditionally-required" data-section="basic"><%= I18n.t("archival_object.title") %></th>
+            <th id="colCompId" class="fieldset-label" data-section="basic"><%= I18n.t("archival_object.component_id") %></th>
+            <th id="colLang" class="fieldset-label sticky" data-section="basic"><%= I18n.t("archival_object.language") %></th>
+            <th id="colExpr" class="fieldset-label sticky" data-section="date"><%= I18n.t("date.expression") %></th>
+            <th id="colDType" class="fieldset-label sticky" data-section="date"><%= I18n.t("rde.date_type") %></th>
+            <th id="colDBegin" class="fieldset-label sticky" data-section="date"><%= I18n.t("date.begin") %></th>
+            <th id="colDEnd" class="fieldset-label sticky" data-section="date"><%= I18n.t("date.end") %></th>
+            <th id="colIType" class="fieldset-label sticky" data-section="instance"><%= I18n.t("rde.instance_type") %></th>
+            <th id="colCType1" class="fieldset-label sticky" data-section="instance"><%= I18n.t("container.type_1") %></th>
+            <th id="colCInd1" class="fieldset-label sticky" data-section="instance"><%= I18n.t("container.indicator_1") %></th>
+            <th id="colCBarc1" class="fieldset-label sticky" data-section="instance"><%= I18n.t("container.barcode_1") %></th>
+            <th id="colCType2" class="fieldset-label" data-section="instance"><%= I18n.t("container.type_2") %></th>
+            <th id="colCInd2" class="fieldset-label" data-section="instance"><%= I18n.t("container.indicator_2") %></th>
+            <th id="colCType3" class="fieldset-label" data-section="instance"><%= I18n.t("container.type_3") %></th>
+            <th id="colCInd3" class="fieldset-label" data-section="instance"><%= I18n.t("container.indicator_3") %></th>
+            <th id="colNType1" class="fieldset-label" data-section="note"><%= I18n.t("note._singular") %> 1</th>
+            <th id="colNCont1" class="fieldset-label" data-section="note"><%= I18n.t("note_attributes.content") %> 1</th>
+            <th id="colNType2" class="fieldset-label" data-section="note"><%= I18n.t("note._singular") %> 2</th>
+            <th id="colNCont2" class="fieldset-label" data-section="note"><%= I18n.t("note_attributes.content") %> 2</th>
+            <th id="colNType3" class="fieldset-label" data-section="note"><%= I18n.t("note._singular") %> 3</th>
+            <th id="colNCont3" class="fieldset-label" data-section="note"><%= I18n.t("note_attributes.content") %> 3</th>
+            <th id="colActions" data-section="empty"></th>
           </tr>
           </thead>
           <tbody>
@@ -239,7 +323,16 @@
           </tbody>
         </table>
         <p>
-          <button class="btn btn-small btn-success add-row"><%= I18n.t("rde.actions.add_row") %></button>
+          <div class="btn-group">
+            <button class="btn btn-small btn-success add-row"><%= I18n.t("rde.actions.add_row") %></button>
+            <button class="btn btn-small btn-success dropdown-toggle" data-toggle="dropdown">
+              <span class="caret"></span>
+            </button>
+            <div class="dropdown-menu add-rows-form">
+              <div><input type="number" class="input-medium" value="1" /></div>
+              <button class="btn btn-small input-medium btn-primary" type="button"><%= I18n.t("rde.actions.add_rows") %></button>
+            </div>
+          </div>
         </p>
         <div class="row">
           <div class="well span12">
