Add new RDE selenium tests.. plus fix add-row not working in firefox

--- a/frontend/app/views/archival_objects/_rde.html.erb
+++ b/frontend/app/views/archival_objects/_rde.html.erb
@@ -157,7 +157,7 @@
         <p>
           <div class="btn-group">
             <button class="btn btn-small btn-success add-row"><%= I18n.t("rde.actions.add_row") %></button>
-            <button class="btn btn-small btn-success dropdown-toggle" data-toggle="dropdown">
+            <button class="btn btn-small btn-success dropdown-toggle add-rows-dropdown" data-toggle="dropdown">
               <span class="caret"></span>
             </button>
             <div class="dropdown-menu add-rows-form">
@@ -325,7 +325,7 @@
         <p>
           <div class="btn-group">
             <button class="btn btn-small btn-success add-row"><%= I18n.t("rde.actions.add_row") %></button>
-            <button class="btn btn-small btn-success dropdown-toggle" data-toggle="dropdown">
+            <button class="btn btn-small btn-success dropdown-toggle add-rows-dropdown" data-toggle="dropdown">
               <span class="caret"></span>
             </button>
             <div class="dropdown-menu add-rows-form">
