--- a/frontend/app/views/shared/_subrecord_form.html.erb
+++ b/frontend/app/views/shared/_subrecord_form.html.erb
@@ -10,6 +10,8 @@
   js_template_name = "template_#{template}" if js_template_name.blank?
   custom_action_template = false if custom_action_template.blank?
   help_topic = form.help_path_for(name) if help_topic.blank?
+  hidden = false if hidden.blank?
+  section_class = hidden ? "subrecord-form-hidden" : "subrecord-form"
 
   required = form.required?(name) if required.blank?
 
@@ -19,8 +21,8 @@
 <%= render :partial=>template_erb, :locals => {:form => form} %>
 
 
-<section id="<%= section_id %>" class="subrecord-form <% if required == :conditionally %> conditionally-required<% elsif required %> required<% end %>" data-subrecord-form="true" data-object-name="<%= singular %>" data-template="<%= js_template_name %>" <% if custom_action_template %>data-custom-action="true"<% end %> data-cardinality="<%= cardinality %>">
-
+<section id="<%= section_id %>" class="<%= section_class %><% if required == :conditionally %> conditionally-required<% elsif required %> required<% end %>" data-subrecord-form="true" data-object-name="<%= singular %>" data-template="<%= js_template_name %>" <% if custom_action_template %>data-custom-action="true"<% end %> data-cardinality="<%= cardinality %>">
+  <% unless hidden %>
   <<%= heading_size %> class="subrecord-form-heading">
     <%= wrap_with_tooltip(heading_text, "#{form.i18n_for(name)}_tooltip", "subrecord-form-heading-label") %>
 
@@ -34,6 +36,7 @@
     <% end %>
 
   </<%= heading_size %>>
+  <% end %>
 
   <div class="subrecord-form-container">
     <% if cardinality === :zero_to_one %>
